display non-edit actions in read-only model of exchanges table
also, not always was the correct icon shown for library processes